methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
if (getCouleurSol()==color.green){
  return(true)
}else{
  return false
}
}